--- a/src/styles/OverlayButtons.style.css
+++ b/src/styles/OverlayButtons.style.css
@@ -6,7 +6,6 @@
   position: fixed;
   background: var(--clr-main-var, white);
   border-radius: 50%;
-  margin: 1rem;
 }
 
 .overlay:hover {
@@ -21,13 +20,13 @@
 .overlay.preview {
   --clr-main-var: rgb(155, 155, 255);
   --clr-hover-var: rgb(125, 125, 253);
-  bottom: 0;
-  right: 0;
+  bottom: 1rem;
+  right: 1rem;
 }
 
 .overlay.download {
   --clr-main-var: rgb(155, 255, 193);
   --clr-hover-var: rgb(119, 253, 170);
-  bottom: 0;
-  left: 0;
+  bottom: 1rem;
+  left: 1rem;
 }
